--- a/assets/style.css
+++ b/assets/style.css
@@ -29,7 +29,7 @@ body {
 	vertical-align: middle;
 }
 
-.title {
+h1 {
 	font-family: 'Fjalla One', sans-serif;
 	font-weight: 700;
 	font-size: 3em;
@@ -38,47 +38,24 @@ body {
 	margin: 0;
 }
 
-.sub-title {
-	margin: 0 0 2em 0;
-}
+p { margin: 0 0 1em 0; }
 
-.footer {
-	position: absolute;
-	bottom: 0;
-	font-size: 0.7em;
-	left: 6px;
-	color: gray;
-}
-
-.footer a {
-	text-decoration: none;
-	color: gray;
-}
-
-#social-links {
+ul {
 	margin: 0;
 	padding: 0;
 }
 
-#social-links li {
+li {
 	margin-right: 20px;
 	display: inline;
 }
 
-#social-links li:last-child { margin-right: 0 }
+li:last-child { margin-right: 0 }
 
-#social-links li a {
-	padding-bottom: 1px;
-	text-transform: lowercase;
+li a {
 	display: inline-block;
-	color: #fff;
-	border: 1px solid #fff;
-	-webkit-border-radius: 3px;
-	-moz-border-radius: 3px;
-	border-radius: 3px;
-	padding: 10px;
-	font-family: 'Raleway', sans-serif;
-	font-weight: 400;
+	color: #f9f9f9;
+	font-size: 4em;
 	text-decoration: none;
 	-o-transition: .5s;
 	-ms-transition: .5s;
@@ -87,13 +64,19 @@ body {
 	transition: .5s;
 }
 
-#social-links li a:hover { color: #fff }
-#social-links li a.twitter:hover { border-color: #29c5f6 }
-#social-links li a.github:hover { border-color: #5383e9 }
-#social-links li a.imdb:hover { border-color: #f85993 }
-#social-links li a.linkedin:hover { border-color: #dd4b39 }
+li a:hover {
+    -moz-transform: translate(0, -4px);
+    -ms-transform: translate(0, -4px);
+    -o-transform: translate(0, -4px);
+    -webkit-transform: translate(0, -4px);
+    transform: translate(0, -4px)
+}
 
-@media (max-width: 767px) {
-	#social-links li { margin-right: 2px }
-	#social-links li a { margin-bottom: 12px }
+li a .fa-twitter-square:hover { color: #2aa3ef }
+li a .fa-github-square:hover { color: lightgray }
+li a .fa-imdb:hover { color: #dba506 }
+li a .fa-linkedin:hover { color: #0073b1 }
+
+@media (max-width: 370px) {
+	li a { font-size: 3em; }
 }
